# image-uploader

./: .example.env  .gitignore  LICENSE  app.py  config.default.yml  config.example.yml  config.yml  main.py  pyproject.toml
modules/: __init__.py
modules/templates/: base.html
modules/uploader/: uploader.py
modules/viewer/: viewer.py
modules/viewer/templates/: error.html  view.html
utils/: config.py  database.py
