[tool.poetry]
name = "image-uploader"
version = "1.0.0"
description = "A self-hosting custom image uploader."
authors = ["Mint <developer@chocomint.dev>"]
maintainers = ["Mint <developer@chocomint.dev>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/lunarmint/image-uploader"

[tool.poetry.dependencies]
Flask = "2.1.2"
Flask-JWT-Extended = "4.4.1"
Pillow = "9.1.1"
pillow-heif = "0.6.0"
pyaml-env = "1.1.5"
pymongo = "4.2.0"
python = "^3.10"
python-magic = "0.4.27"
python-magic-bin = "0.4.14"

[tool.poetry.dev-dependencies]
black = ">=22.6.0"
flake8 = ">=5.0.4"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
